--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
-ROOT_URL="http://localhost:3000/"
+ROOT_URL="http://localhost:3000"
